containers/db-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  type: NodePort
  ports:
   - port: 5432
     targetPort: 5432
  selector:
    io.kompose.service: db
