containers/flask-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flask
spec:
  type: NodePort
  ports:
   - port: 5000
     targetPort: 5000
  selector:
    io.kompose.service: flask
